# firstmate-gear

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
fleet-dashboard/: README.md  _demo.py  fm-status  fm_status.py
reading-room/: README.md  fm-read  fm_read.py
tests/: conftest.py  test_cli.py  test_fm_read.py  test_home.py  test_parsing.py  test_render.py  test_semaphore.py
