[project]
name = "firstmate-gear"
version = "0.1.0"
description = "Companion tools that outfit a firstmate fleet: fm-status (the fleet board) and fm-read (the reading room)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "rich>=13.7",
    "textual>=0.80",
]

[project.scripts]
fm-status = "fm_status:main"
fm-read = "fm_read:main"

[project.urls]
Homepage = "https://github.com/mikefwille/firstmate-gear"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
include = ["fleet-dashboard/*.py", "reading-room/*.py", "tests/*.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The tools stay single-file uv scripts (runnable directly, PEP 723 inline deps);
# the wheel just lifts each one in as a top-level module for the entry points.
[tool.hatch.build.targets.wheel.force-include]
"fleet-dashboard/fm_status.py" = "fm_status.py"
"reading-room/fm_read.py" = "fm_read.py"
